<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
     >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
                <TextView
            android:id="@+id/tvocategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvocategoryname" />
        
    <Spinner
        android:id="@+id/spocategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvocincome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvoincomename" />

        <EditText
            android:id="@+id/etoincome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

        </EditText>

    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvodeductions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvodeductionsname" />

        <EditText
            android:id="@+id/etodeductions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

        </EditText>

    </LinearLayout>
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvotax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvotaxname"/>"

        <EditText
            android:id="@+id/etotax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

        </EditText>

    </LinearLayout>
       
         
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

        <TextView
            android:id="@+id/tvoincaftertax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvoincaftertaxname"/>

        <EditText
            android:id="@+id/etoinaftertax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

        </EditText>

    </LinearLayout>

<Button
    android:id="@+id/btochecktax"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btochecktaxname" />

</LinearLayout>